--- a/nginx.conf
+++ b/nginx.conf
@@ -2,132 +2,167 @@
 #user  nobody;
 worker_processes  1;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
-
-
 events {
     worker_connections  1024;
 }
 
-
 http {
     include       mime.types;
     default_type  application/octet-stream;
-
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
-    #access_log  logs/access.log  main;
-
     sendfile        on;
-    #tcp_nopush     on;
-
-    #keepalive_timeout  0;
+    tcp_nopush      on;
+    tcp_nodelay     on;
     keepalive_timeout  65;
+    
+    # 开启 gzip 压缩
+    gzip  on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/x-javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
 
-    #gzip  on;
+    server {
+        listen       80;
+        server_name doctor-dog.com;
+        rewrite ^(.*) https://$server_name$1 permanent;
+    }
+
+    # 根据 Referer 映射到项目目录名
+    map $http_referer $project_name {
+        default "";
+        "~*/en/" "en-dashboard";
+        "~*/ai/" "ai";
+        "~*/docs/" "docs";
+    }
 
     server {
         listen       443 ssl;
         server_name  doctor-dog.com;
-      
-	ssl_certificate cert/doctor-dog.com.pem;
-	ssl_certificate_key cert/doctor-dog.com.key;
-	
-	ssl_session_cache shared:SSL:1m;
-	ssl_session_timeout 5m;
+  
+        ssl_certificate cert/doctor-dog.com.pem;
+        ssl_certificate_key cert/doctor-dog.com.key;
+        
+       	# ssl_session_cache shared:SSL:1m;
+       	# ssl_session_timeout 5m;
 
-	ssl_ciphers HIGH:!aNULL:!MD5;
-	ssl_prefer_server_ciphers on;
+        # ssl_ciphers HIGH:!aNULL:!MD5;
+        # ssl_prefer_server_ciphers on;
 
-        #charset koi8-r;
+        # 处理绝对路径的 /assets/ 请求（自动路由到对应项目）
+        location ^~ /assets/ {
+            # 添加调试响应头
+            add_header X-Project-Name $project_name always;
+            
+            if ($project_name = "") {
+                return 404;
+            }
+            alias /lihong/$project_name/dist/assets/;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+        
+		location = / {
+			alias /lihong/home/;
+			try_files /index.html =404;
+			expires -1;
+				add_header Cache-Control "no-cache, must-revalidate";
+		}
 
-        #access_log  logs/host.access.log  main;
+		# 自动补全末尾斜杠
+		location = /en {
+			return 301 /en/;
+		}
 
-        location / {
-            root   /lihong/en/en/dist;
-	    index  index.html index.htm;
-	   
+		location ^~ /en/ {
+			alias /lihong/en-dashboard/dist/;
+			try_files $uri $uri/ /en/index.html;
+			
+			# HTML 文件不缓存
+			location ~ \.html$ {
+				expires -1;
+				add_header Cache-Control "no-cache, must-revalidate";
+			}
+			
+			# 静态资源缓存 1 年
+			location ~ \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+				expires 1y;
+				add_header Cache-Control "public, immutable";
+			}
+		}
+
+		# 自动补全末尾斜杠
+		location = /ai {
+			return 301 /ai/;
+		}
+
+		# ai 项目
+		location ^~ /ai/ {
+			alias /lihong/ai/dist/;
+			try_files $uri $uri/ /ai/index.html;
+			
+			# HTML 文件不缓存
+			location ~ \.html$ {
+				expires -1;
+				add_header Cache-Control "no-cache, must-revalidate";
+			}
+			
+			# 静态资源缓存 1 年
+			location ~ \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+				expires 1y;
+				add_header Cache-Control "public, immutable";
+			}
+		}
+
+		# 自动补全末尾斜杠
+		location = /docs {
+			return 301 /docs/;
+		}
+
+		# docs 项目
+		location ^~ /docs/ {
+			alias /lihong/docs/docs/.vitepress/dist/;
+			try_files $uri $uri/ /docs/index.html;
+			
+			# HTML 文件不缓存
+			location ~ \.html$ {
+				expires -1;
+				add_header Cache-Control "no-cache, must-revalidate";
+			}
+			
+			# 静态资源缓存 1 年
+			location ~ \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+				expires 1y;
+				add_header Cache-Control "public, immutable";
+			}
+		}
+		location /static/ {
+			alias /lihong/static/;  # 指向存放JS文件的目录
+		
+			expires -1;
+			add_header Cache-Control "no-cache, no-store, must-revalidate, proxy-revalidate";
+			add_header Pragma "no-cache";
+			add_header Expires "0";
+			add_header 'Access-Control-Allow-Origin' '*' always;
+			add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+			add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always; 
+		}
+
+        location /api/ {
+            proxy_pass http://8.137.107.171:3000/;
+	    	proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_connect_timeout 60s;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
+	    	add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, plugin-token';	
         }
 
-	location /api/ {
-	    proxy_pass   http://localhost:3000/;
-	}
-
-
-        #error_page  404         	/404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        
-	error_page   500 502 503 504  /50x.html;
+        error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   html;
         }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
-
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
-
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
-
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
 }
