--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,3 @@
-
 #user  nobody;
 worker_processes  1;
 
@@ -21,143 +20,187 @@ http {
     gzip_comp_level 6;
     gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/x-javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
 
+    # HTTP 跳转 HTTPS
     server {
         listen       80;
-        server_name doctor-dog.com;
-        rewrite ^(.*) https://$server_name$1 permanent;
+        server_name doctor-dog.com .doctor-dog.com;
+        rewrite ^(.*) https://$host$1 permanent;
     }
 
-    # 根据 Referer 映射到项目目录名
-    map $http_referer $project_name {
-        default "";
-        "~*/en/" "en-dashboard";
-        "~*/ai/" "ai";
-        "~*/docs/" "docs";
-    }
-
+    # ========== doctor-dog.com（我的个人主页） ==========
     server {
         listen       443 ssl;
         server_name  doctor-dog.com;
   
         ssl_certificate cert/doctor-dog.com.pem;
         ssl_certificate_key cert/doctor-dog.com.key;
-        
-       	# ssl_session_cache shared:SSL:1m;
-       	# ssl_session_timeout 5m;
 
-        # ssl_ciphers HIGH:!aNULL:!MD5;
-        # ssl_prefer_server_ciphers on;
-
-        # 处理绝对路径的 /assets/ 请求（自动路由到对应项目）
-        location ^~ /assets/ {
-            # 添加调试响应头
-            add_header X-Project-Name $project_name always;
-            
-            if ($project_name = "") {
-                return 404;
-            }
-            alias /lihong/$project_name/dist/assets/;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-        
 		location = / {
 			alias /lihong/home/;
 			try_files /index.html =404;
 			expires -1;
-				add_header Cache-Control "no-cache, must-revalidate";
+			add_header Cache-Control "no-cache, must-revalidate";
 		}
+	}
 
-		# 自动补全末尾斜杠
-		location = /en {
-			return 301 /en/;
-		}
+    # ========== en.doctor-dog.com ==========
+    server {
+        listen       443 ssl;
+        server_name  en.doctor-dog.com;
+        ssl_certificate cert/en.doctor-dog.com.pem;
+        ssl_certificate_key cert/en.doctor-dog.com.key;
 
-		location ^~ /en/ {
-			alias /lihong/en-dashboard/dist/;
-			try_files $uri $uri/ /en/index.html;
-			
-			# HTML 文件不缓存
-			location ~ \.html$ {
-				expires -1;
-				add_header Cache-Control "no-cache, must-revalidate";
-			}
-			
-			# 静态资源缓存 1 年
-			location ~ \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-				expires 1y;
-				add_header Cache-Control "public, immutable";
-			}
-		}
+        root /lihong/en-dashboard/dist;
+        index index.html;
 
-		# 自动补全末尾斜杠
-		location = /ai {
-			return 301 /ai/;
-		}
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
 
-		# ai 项目
-		location ^~ /ai/ {
-			alias /lihong/ai/dist/;
-			try_files $uri $uri/ /ai/index.html;
-			
-			# HTML 文件不缓存
-			location ~ \.html$ {
-				expires -1;
-				add_header Cache-Control "no-cache, must-revalidate";
-			}
-			
-			# 静态资源缓存 1 年
-			location ~ \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-				expires 1y;
-				add_header Cache-Control "public, immutable";
-			}
-		}
+        location ~ \.html$ {
+            expires -1;
+            add_header Cache-Control "no-cache, must-revalidate";
+        }
 
-		# 自动补全末尾斜杠
-		location = /docs {
-			return 301 /docs/;
-		}
+        location ~ \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
 
-		# docs 项目
-		location ^~ /docs/ {
-			alias /lihong/docs/docs/.vitepress/dist/;
-			try_files $uri $uri/ /docs/index.html;
-			
-			# HTML 文件不缓存
-			location ~ \.html$ {
-				expires -1;
-				add_header Cache-Control "no-cache, must-revalidate";
-			}
-			
-			# 静态资源缓存 1 年
-			location ~ \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-				expires 1y;
-				add_header Cache-Control "public, immutable";
-			}
-		}
-		location /static/ {
-			alias /lihong/static/;  # 指向存放JS文件的目录
-		
-			expires -1;
-			add_header Cache-Control "no-cache, no-store, must-revalidate, proxy-revalidate";
-			add_header Pragma "no-cache";
-			add_header Expires "0";
-			add_header 'Access-Control-Allow-Origin' '*' always;
-			add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-			add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always; 
-		}
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+    }
 
-        location /api/ {
+    # ========== blog.doctor-dog.com ==========
+    server {
+        listen       443 ssl;
+        server_name  blog.doctor-dog.com;
+        ssl_certificate cert/blog.doctor-dog.com.pem;
+        ssl_certificate_key cert/blog.doctor-dog.com.key;
+
+        root /lihong/blog/docs/.vitepress/dist;
+        index index.html;
+
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+
+        location ~ \.html$ {
+            expires -1;
+            add_header Cache-Control "no-cache, must-revalidate";
+        }
+
+        location ~ \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+    }
+
+    # ========== ai.doctor-dog.com ==========
+    server {
+        listen       443 ssl;
+        server_name  ai.doctor-dog.com;
+        ssl_certificate cert/ai.doctor-dog.com.pem;
+        ssl_certificate_key cert/ai.doctor-dog.com.key;
+
+        root /lihong/ai/dist;
+        index index.html;
+
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+
+        location ~ \.html$ {
+            expires -1;
+            add_header Cache-Control "no-cache, must-revalidate";
+        }
+
+        location ~ \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+    }
+
+    # ========== api.doctor-dog.com（云服务器本地后端） ==========
+    server {
+        listen       443 ssl;
+        server_name  api.doctor-dog.com;
+        ssl_certificate cert/api.doctor-dog.com.pem;
+        ssl_certificate_key cert/api.doctor-dog.com.key;
+
+        location / {
             proxy_pass http://8.137.107.171:3000/;
-	    	proxy_set_header Host $host;
+            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_connect_timeout 60s;
             proxy_read_timeout 60s;
             proxy_send_timeout 60s;
-	    	add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, plugin-token';	
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, plugin-token' always;
+
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, plugin-token';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+    }
+    # ========== home.doctor-dog.com（家庭服务器，DDNS 动态解析） ==========
+    server {
+        listen       443 ssl;
+        server_name  home.doctor-dog.com;
+        ssl_certificate cert/home.doctor-dog.com.pem;
+        ssl_certificate_key cert/home.doctor-dog.com.key;
+
+        resolver 8.8.8.8 223.5.5.5 valid=60s;
+        set $backend_home "http://home.doctor-dog.com:3000";
+
+        location / {
+            proxy_pass $backend_home/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 60s;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, plugin-token' always;
+
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, plugin-token';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
         }
 
         error_page   500 502 503 504  /50x.html;
